<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.3</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>org.dicoogle</groupId>
    <artifactId>dicoogle-next-backend-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>dicoogle-next-backend-parent</name>
    <description>Dicoogle Next backend parent</description>

    <modules>
        <module>dicoogle-next</module>
        <module>dicoogle-next-sdk</module>
        <module>dicoogle-next-core</module>
        <module>dicoogle-next-protocol-dimse</module>
        <module>dicoogle-next-protocol-dicomweb</module>
        <module>plugins/dicoogle-next-storage-file-ro</module>
        <module>plugins/dicoogle-next-storage-file-rw</module>
        <module>plugins/dicoogle-next-query-file</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.minimum.version>3.9.12</maven.minimum.version>
        <springdoc.version>3.0.2</springdoc.version>
        <dcm4che.version>5.34.0</dcm4che.version>
        <spotless.version>2.44.3</spotless.version>
        <google-java-format.version>1.24.0</google-java-format.version>
        <maven-enforcer-plugin.version>3.6.2</maven-enforcer-plugin.version>
    </properties>

    <repositories>
        <repository>
            <id>dcm4che-releases</id>
            <url>https://www.dcm4che.org/maven2</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-runtime</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[${java.version},)</version>
                                </requireJavaVersion>
                                <requireMavenVersion>
                                    <version>[${maven.minimum.version},)</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.version}</version>
                <configuration>
                    <java>
                        <googleJavaFormat>
                            <version>${google-java-format.version}</version>
                            <style>GOOGLE</style>
                        </googleJavaFormat>
                        <removeUnusedImports/>
                        <trimTrailingWhitespace/>
                        <endWithNewline/>
                    </java>
                    <formats>
                        <format>
                            <includes>
                                <include>*.md</include>
                                <include>.editorconfig</include>
                                <include>.gitattributes</include>
                                <include>.gitignore</include>
                            </includes>
                            <trimTrailingWhitespace/>
                            <endWithNewline/>
                        </format>
                    </formats>
                </configuration>
                <executions>
                    <execution>
                        <id>spotless-apply</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>apply</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
